# fir_filter

./: .gitignore  CMakeLists.txt  README.md
include/: fir_filter.h  fir_filter_cli.h
src/: fir_filter.c  fir_filter_cli.c  main.c
tests/: fir_filter_tests.cpp
